# todo-app

./: .env.example  Dockerfile  LICENSE  README.md  compose.yaml  main.py  pyproject.toml  requirements.txt
src/application/: task_service.py
src/application/entities/: subscriber.py
src/application/helpers/: singleton_meta.py
src/application/services/: external.py  real_time.py  task.py
src/domain/entities/: event.py  task.py
src/domain/enums/: event_type.py  task_status.py
src/domain/helpers/: singleton_meta.py
src/domain/ports/: external.py  real_time.py  subscriber.py  task.py
src/domain/repositories/: task.py
src/domain/services/: task.py
src/infrastructure/config/: __init__.py  _default.py  app.py  background_task.py  database.py  external.py
src/infrastructure/database/: __init__.py  lifespan.py  session.py
src/infrastructure/database/base/: table.py
src/infrastructure/database/models/: task.py
src/infrastructure/task/: task_repository.py
src/presentation/: app.py
src/presentation/depends/: task_service.py
src/presentation/http/: router.py
src/presentation/http/controllers/: task.py  task_generator.py  todo.py
src/presentation/http/dtos/: create.py  update.py
src/presentation/http/dtos/request/: create.py  update.py
src/presentation/http/dtos/response/: task.py
src/presentation/websocket/: route.py
tests/: README.md  test_endpoint_task.py
